--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,45 +1,60 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch file",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "program": "${file}",
-            "args": [],
-            "cwd": "${fileDirname}", //设置工作目录
-            "internalConsoleOptions": "openOnSessionStart",
-            "output": "${fileDirname}/vsdebug_server.exe", //设置vscode调试时生成文件的路径
-            "showGlobalVariables": true,
-            "env": {
-                "GOARCH": "amd64",
-                "CGO_ENABLED": 0
-            }, 
-        },
-        {
-            "name": "Launch Package",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "program": "${fileDirname}",
-        },
-        {
-            "name": "Launch test package",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "program": "${workspaceFolder}"
-        },
-        {
-            "name": "Launch executable",
-            "type": "go",
-            "request": "launch",
-            "mode": "exec",
-            "program": "absolute-path-to-the-executable"
-        }
-    ]
+  // 使用 IntelliSense 了解相关属性。
+  // 悬停以查看现有属性的描述。
+  // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Launch file",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${file}",
+      "args": [],
+      "cwd": "${fileDirname}", //设置工作目录
+      "internalConsoleOptions": "openOnSessionStart",
+      "output": "${fileDirname}/vsdebug_server.exe", //设置vscode调试时生成文件的路径
+      "showGlobalVariables": true,
+      "env": {
+        "GOARCH": "amd64",
+        "CGO_ENABLED": 0
+      },
+      "showLog": true
+    },
+    {
+      "name": "Test Current File",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "remotePath": "",
+      "port": 2345,
+      "host": "127.0.0.1",
+      "program": "${file}",
+      "env": {},
+      "args": [],
+      "showLog": true
+    },
+    {
+      "name": "Launch Package",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${fileDirname}",
+      "showLog": true
+    },
+    {
+      "name": "Launch test package",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}"
+    },
+    {
+      "name": "Launch executable",
+      "type": "go",
+      "request": "launch",
+      "mode": "exec",
+      "program": "absolute-path-to-the-executable"
+    }
+  ]
 }
